# Predicting-Student-Test-Scores-Repo

./: README.md  pyproject.toml
scripts/: download_data.py  predict.py  train.py
src/test_scores/: features.py  logging_utils.py  metrics.py  model.py  predict.py  submission.py  train.py
